# mdat

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format.sh  install.sh  lgtm.yml  run.sh
doc/: structure.dia
src/: Bitslicer.cpp  Bitslicer.h  CMakeLists.txt  Commandline.cpp  Commandline.h  Commandline_test.cpp  Globaltypes.cpp  Globaltypes.h  Histogram.cpp  Histogram.h  Lmfile.cpp  Lmfile.h  Mdat.cpp  Mdat.h  Mdat_test.cpp  Mdatevent.cpp  Mdatevent.h  Mdatevent_test.cpp  QMRConfig.h  QMRConfig.h.in  Timestamps.cpp  Timestamps.h  dumpmdat.cpp  errorcodes.h  extractmdat.cpp  histolong.cpp  histolong.hpp  mdataddtof.pl  mdatdump  mdathistogram  mdathistogram.cpp  mdatshift  mdatshift.cpp  mdatslice  mdatslice.cpp  mdatspikefilter.pl  mdatsyncchecker  mdatsyncchecker.cpp  mkhistogram  mkhistogram.cpp  (+2 more)
tests/: 39events.mdat  3events.mdat  5linesheader.mdat  Bitslicer_test.cpp  CMakeLists.txt  Histogram_test.cpp  Lmfile_test.cpp  Mdatevent_test  Mdatevent_test.cpp  Timestamps_test  Timestamps_test.cpp  data.txt  mini.mdat  mini1.mdat  mini_end.mdat  tests.cpp
tests/conversion/: mk02_cutsemaphore.sh  mk03_cutswitch.sh  mk04_nospikes2.sh  mk05_tof.sh
tests/conversion/01_text/: M789.txt
tests/slicetest/: mdatslice_before_2019-12-07  test_mdatslice.sh
